[tool.poetry]
name = "lats"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.0.32"
langchain-core = "^0.1.41"
langchain-google-vertexai = {git = "https://github.com/langchain-ai/langchain-google", subdirectory = "libs/vertexai"}
langchain-community = "^0.0.32"
google-api-python-client = "^2.125.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
